--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,600,700&display=swap"
+    rel="stylesheet" />
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
@@ -36,14 +37,16 @@
             </h3>
             <span> college</span>
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
             <ul class="navbar-nav  ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="https://canvas.dntu.edu.vn/courses/49">Home <span
+                    class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html"> About </a>
@@ -630,19 +633,19 @@
       &copy; 2021 All Rights Reserved By
       <a href="https://html.design/">Free Html Templates</a>
     </p>
-  
+
   </footer>
 
-   
+
   <footer class="container-fluid footer_section">
-  
-      <p>
-        Distributed By 
-        <a href="https://themewagon.com/">Themewagon</a>
-      </p>
-  
+
+    <p>
+      Distributed By
+      <a href="https://themewagon.com/">Themewagon</a>
+    </p>
+
   </footer>
- 
+
   <!-- footer section -->
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
