--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>L U C Y</title>
+    <title>Lập trình Mobile</title>
 
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -69,12 +69,12 @@
                                 <br>
                                 Framework sử dụng: React Native.
                             </p>
-                            <a href="https://play.google.com/store/apps/details?id=host.exp.exponent"
+                            <a href="https://play.google.com/store/apps/details?id=host.exp.exponent" target="_blank"
                                 class="btn btn-download wow animated fadeInLeft">
                                 <i class="fa fa-android pull-left"></i>
                                 <strong>Get it on</strong>
                                 <br />Google Play </a>
-                            <a href="https://apps.apple.com/app/apple-store/id982107779"
+                            <a href="https://apps.apple.com/app/apple-store/id982107779" target="_blank"
                                 class="btn btn-download wow animated fadeInRight">
                                 <i class="fa fa-apple pull-left"></i>
                                 <strong>Get it on</strong>
@@ -163,16 +163,18 @@
             <div class="virticle-line"></div>
             <div class="circle"></div>
             <div class="row">
-                <div class="col-sm-4 wow animated fadeInLeft">
-                    <div class="special-icon">
-                        <i class="fa fa-rocket"></i>
+                <a href="https://canvas.dntu.edu.vn/courses/49/assignments" target="_blank">
+                    <div class="col-sm-4 wow animated fadeInLeft">
+                        <div class="special-icon">
+                            <i class="fa fa-rocket"></i>
+                        </div>
+                        <h3>Free App</h3>
+                        <p>
+                            Your project looks great on any device. Content can be easily read and a user understands
+                            freely.
+                        </p>
                     </div>
-                    <h3>Free App</h3>
-                    <p>
-                        Your project looks great on any device. Content can be easily read and a user understands
-                        freely.
-                    </p>
-                </div>
+                </a>
                 <div class="col-sm-4 animation-box wow bounceIn animated">
                     <div class="special-icon">
                         <i class="fa fa-usd"></i>
