--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- <div id="preloader"></div> -->
     <!-- HHHHHHHHHHHHHHHHHH        Header          HHHHHHHHHHHHHHHH -->
     <section id="header" class="header">
-        <div class="top-bar">
+        <div>
             <div class="container">
                 <div class="navigation" id="navigation-scroll">
                     <div class="row">
