--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 contact-item col-sm-6 col-xs-12 wow animated fadeInLeft">
-                    <i class="fa fa-facebook"></i>
+                    <a href="https://www.facebook.com/phucthinhdo.dntu" target="_blank">
+                        <i class="fa fa-facebook"></i>
+                    </a>
                     <h3>Facebook</h3>
                     <p class="contact">
                         Thinh Do <br>
@@ -188,7 +190,9 @@
                     </p>
                 </div>
                 <div class="col-md-3 contact-item col-sm-6 col-xs-12 wow animated fadeInLeft">
-                    <i class="fa fa-phone"></i>
+                    <a href="https://zalo.me/0847088880" target="_blank">
+                        <i class="fa fa-phone"></i>
+                    </a>
                     <h3>Phone</h3>
                     <p class="contact">
                         Mobile: 0847 088880 <br>
@@ -196,19 +200,21 @@
                     </p>
                 </div>
                 <div class="col-md-3 contact-item col-sm-6 col-xs-12 wow animated fadeInRight">
-                    <a href="https://scholar.google.com/citations?user=3NsJ--wAAAAJ">
+                    <a href="https://scholar.google.com/citations?user=3NsJ--wAAAAJ" target="_blank">
                         <i class="fa fa-user"></i>
                     </a>
                     <h3>Google Scholar</h3>
                     <p class="contact">
-                        <a href="https://scholar.google.com/citations?user=3NsJ--wAAAAJ">Phuc Thinh Do</a>
+                        Phuc Thinh Do
                     </p>
                 </div>
                 <div class="col-md-3 contact-item col-sm-6 col-xs-12 wow animated fadeInRight">
-                    <i class="fa fa-envelope"></i>
+                    <a href="mailto:dophucthinh@dntu.edu.vn" target="_blank">
+                        <i class="fa fa-envelope"></i>
+                    </a>
                     <h3>Email Address</h3>
                     <p class="contact">
-                        <a href="mailto:dophucthinh@dntu.edu.vn">dophucthinh@dntu.edu.vn</a>
+                        dophucthinh@dntu.edu.vn
                     </p>
                 </div>
             </div> <!-- /.row -->
