--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="virticle-line"></div>
             <div class="circle"></div>
             <div class="row">
-                <div class="col-md-4 wow animated fadeInLeft">
+                <div class="col-md-4 col-sm-4 wow animated fadeInLeft">
 
                 </div>
                 <div class="col-md-4 col-sm-4 animation-box wow bounceIn animated">
@@ -168,7 +168,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4 wow animated fadeInRight">
+                <div class="col-md-4 col-sm-4 wow animated fadeInRight">
 
                 </div>
             </div> <!-- /.row -->
