--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <a href="#" onclick="openLink('modules');">
                     <div class="col-sm-4 wow animated fadeInLeft">
                         <div class="special-icon">
-                            <i class="fa fa-file-text-o fa-5x"></i>
+                            <i class="fa fa-list fa-5x"></i>
                         </div>
                         <h3>Modules</h3>
                         <!-- <p>
@@ -201,7 +201,7 @@
                 <a href="#" onclick="openLink('teams');">
                     <div class="col-sm-4 animation-box wow bounceIn animated">
                         <div class="special-icon">
-                            <i class="fa fa-book fa-5x"></i>
+                            <i class="fa fa-windows fa-5x"></i>
                         </div>
                         <h3>Microsoft Teams</h3>
                     </div>
@@ -210,7 +210,7 @@
                 <a href="https://www.facebook.com/groups/587231672383506" target="blank">
                     <div class="col-sm-4 wow animated fadeInRight">
                         <div class="special-icon">
-                            <i class="fa fa-pencil fa-5x"></i>
+                            <i class="fa fa-facebook-square fa-5x"></i>
                         </div>
                         <h3>Facebook lớp</h3>
                     </div>
