--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@
 
                 </div>
                 <div class="col-md-4 col-sm-4 animation-box wow bounceIn animated">
-                    <img src="img/gv.jpg" alt="team">
+                    <!-- <img src="img/gv.jpg" alt="team"> -->
+                    <img src="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-6/278274465_4605365172902375_3176642403772887154_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=-TYV5qyMqukAX9-K9qq&_nc_oc=AQlRmRcdK6Qb6Im2RcfqcXDiKyHs9w1Vd8gktl3sOE6uqjzaiNhhKIaMlRr1nlusCs3CyztJS2wmUsJZRt0yz-0z&tn=fp1-O0en5u4GWkY-&_nc_ht=scontent.fsgn2-7.fna&oh=00_AfAC-zRjot_kGgDWVp_6oi0qTGP37mxSP2Jv0rtQQaryYQ&oe=63F1856F"
+                        alt="team">
                     <h3>Đỗ Phúc Thịnh</h3>
                     <p>THẠC SĨ</p>
                     <div class="img-hover">
