--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             //     window.open(link, "_blank");
             // }
             if (txt == 'teams') {
-                if (id == 2417) { var link = `https://teams.microsoft.com/l/team/19%3apIj3WpWqItHgBCE6lzv5rugSnds-K0fsvWewlBLf78U1%40thread.tacv2/conversations?groupId=bab32310-731b-4c6f-9721-caedcbc316de&tenantId=6e0182cd-b36b-4286-b337-e3811b35f106` }
-                if (id == 2418) { var link = `https://teams.microsoft.com/l/team/19%3ank1kfe0wro-tQd_jbkh--XBEWMj7qN7iXKT6X853Wo81%40thread.tacv2/conversations?groupId=0d9bfe85-96c0-457f-b9e5-f4ad09ecfe7c&tenantId=6e0182cd-b36b-4286-b337-e3811b35f106` }
-                if (id == 2419) { var link = `https://teams.microsoft.com/l/team/19%3aQW1T_NTviYuorTY2IegJ72k1AA3dn3AAqne50o0ZxQ81%40thread.tacv2/conversations?groupId=8236a5d3-94e2-4b8e-9f97-313d7e019927&tenantId=6e0182cd-b36b-4286-b337-e3811b35f106` }
-                if (id == 2420) { var link = `https://teams.microsoft.com/l/team/19%3au4M4b0L1plYdnm3XkVfmc8oGjjazFCM-y6-Oqm_TzYA1%40thread.tacv2/conversations?groupId=9a6db721-19e9-41d5-b5e4-43becf8d7a53&tenantId=6e0182cd-b36b-4286-b337-e3811b35f106` }
+                if (id == 1684) { var link = `https://teams.microsoft.com/l/team/19%3A3sqJ2UPRaWfYSStJNJcHRB50wG-Akt6EK0BmorVoUkg1%40thread.tacv2/conversations?groupId=1af24b06-9d53-4765-93d8-0c062a9e3be7&tenantId=` }
+                if (id == 1685) { var link = `https://teams.microsoft.com/l/team/19%3AFaKYv8_-IHLj4fKgJMSsReT7fJo8sGPELUlzvVyyAOs1%40thread.tacv2/conversations?groupId=86ff612c-8026-4c60-802a-2e3e141aefb4&tenantId=` }
+                if (id == 1686) { var link = `https://teams.microsoft.com/l/team/19%3Al5HJSpFIdmg5dS7jKHRl7TAwBv9ZJl6cZPUbjqWd_O81%40thread.tacv2/conversations?groupId=982a1e95-a525-4e8a-b8a1-d4e2f746446c&tenantId=` }
+                if (id == 1687) { var link = `https://teams.microsoft.com/l/team/19%3AU26eehc8GmalOBykXc5l_5PGeaIoCjy-FvkXFq4RV1w1%40thread.tacv2/conversations?groupId=3b85c98b-497c-4195-9fa8-684217d33e74&tenantId=` }
                 window.open(link, "_blank");
             }
             else {
@@ -207,13 +207,13 @@
                         <h3>Microsoft Teams</h3>
                     </div>
                 </a>
-                <!-- Facebook -->
-                <a href="https://www.facebook.com/groups/877354073624782/" target="blank">
+                <!-- Zalo -->
+                <a href="https://zalo.me/g/qtqozg448" target="blank">
                     <div class="col-sm-4 wow animated fadeInRight">
                         <div class="special-icon">
-                            <i class="fa fa-facebook-square fa-5x"></i>
+                            <i class="fa fa-users fa-5x"></i>
                         </div>
-                        <h3>Facebook lớp</h3>
+                        <h3>Zalo lớp</h3>
                     </div>
                 </a>
             </div> <!-- /.row -->
@@ -234,8 +234,7 @@
                 </div>
                 <div class="col-md-4 col-sm-4 animation-box wow bounceIn animated">
                     <!-- <img src="img/gv.jpg" alt="team"> -->
-                    <img src="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-6/278274465_4605365172902375_3176642403772887154_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=-TYV5qyMqukAX9-K9qq&_nc_oc=AQlRmRcdK6Qb6Im2RcfqcXDiKyHs9w1Vd8gktl3sOE6uqjzaiNhhKIaMlRr1nlusCs3CyztJS2wmUsJZRt0yz-0z&tn=fp1-O0en5u4GWkY-&_nc_ht=scontent.fsgn2-7.fna&oh=00_AfAC-zRjot_kGgDWVp_6oi0qTGP37mxSP2Jv0rtQQaryYQ&oe=63F1856F"
-                        alt="team">
+                    <img src="img/gv.jpg" alt="team">
                     <h3>Đỗ Phúc Thịnh</h3>
                     <p>THẠC SĨ</p>
                     <div class="img-hover">
@@ -316,6 +315,22 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div id="screenshots" class="owl-carousel owl-theme">
+                        <a href="img/5.jpg" class="item wow flipInY animated animated"
+                            data-lightbox-gallery="screenshots">
+                            <img src="img/5.jpg" class="img_res wow animated zoomIn" alt="">
+                        </a>
+                        <a href="img/6.jpg" class="item wow flipInY animated animated"
+                            data-lightbox-gallery="screenshots">
+                            <img src="img/6.jpg" class="img_res wow animated zoomIn" alt="">
+                        </a>
+                        <a href="img/7.jpg" class="item wow flipInY animated animated"
+                            data-lightbox-gallery="screenshots">
+                            <img src="img/7.jpg" class="img_res wow animated zoomIn" alt="">
+                        </a>
+                        <a href="img/8.jpg" class="item wow flipInY animated animated"
+                            data-lightbox-gallery="screenshots">
+                            <img src="img/8.jpg" class="img_res wow animated zoomIn" alt="">
+                        </a>
                         <a href="img/1.jpg" class="item wow flipInY animated animated"
                             data-lightbox-gallery="screenshots">
                             <img src="img/1.jpg" class="img_res wow animated zoomIn" alt="">
@@ -332,30 +347,14 @@
                             data-lightbox-gallery="screenshots">
                             <img src="img/4.jpg" class="img_res wow animated zoomIn" alt="">
                         </a>
-                        <a href="img/1.jpg" class="item wow flipInY animated animated"
+                        <!-- <a href="img/1.jpg" class="item wow flipInY animated animated"
                             data-lightbox-gallery="screenshots">
                             <img src="img/1.jpg" class="img_res wow animated zoomIn" alt="">
                         </a>
                         <a href="img/2.jpg" class="item wow flipInY animated animated"
                             data-lightbox-gallery="screenshots">
                             <img src="img/2.jpg" class="img_res wow animated zoomIn" alt="">
-                        </a>
-                        <a href="img/3.jpg" class="item wow flipInY animated animated"
-                            data-lightbox-gallery="screenshots">
-                            <img src="img/3.jpg" class="img_res wow animated zoomIn" alt="">
-                        </a>
-                        <a href="img/4.jpg" class="item wow flipInY animated animated"
-                            data-lightbox-gallery="screenshots">
-                            <img src="img/4.jpg" class="img_res wow animated zoomIn" alt="">
-                        </a>
-                        <a href="img/1.jpg" class="item wow flipInY animated animated"
-                            data-lightbox-gallery="screenshots">
-                            <img src="img/1.jpg" class="img_res wow animated zoomIn" alt="">
-                        </a>
-                        <a href="img/2.jpg" class="item wow flipInY animated animated"
-                            data-lightbox-gallery="screenshots">
-                            <img src="img/2.jpg" class="img_res wow animated zoomIn" alt="">
-                        </a>
+                        </a> -->
                     </div>
                     <div class="customNavigation row">
                         <a class="btn prev gallery-nav wow animated bounceInLeft"><i class="fa fa-chevron-left"></i></a>
